--- a/build.gradle
+++ b/build.gradle
@@ -30,10 +30,11 @@ android {
 }
 
 dependencies {
+    compile 'com.android.support.test:runner:0.3'
+    compile 'com.android.support.test:rules:0.3'
     compile 'com.android.support.test.espresso:espresso-core:2.2'
     compile ('com.android.support.test.espresso:espresso-contrib:2.2') {
         exclude module: 'support-annotations'
     }
-    compile 'com.android.support.test:testing-support-lib:0.1'
     provided 'io.reactivex:rxjava:1.0.13'
 }
